# MultiModal-heart-risk-prediction

./: .gitignore  README.md  README_heart.md  app.py  heart.ipynb  pyproject.toml
